<!--
 Copyright (c) 2010 Matthew J. Dovey (www.ceridwen.com).
 All rights reserved. This program and the accompanying materials
 are made available under the terms of the GNU Public License v3.0
 which accompanies this distribution, and is available at 
 <http://www.gnu.org/licenses />
  
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses />.
 
 Contributors:
     Matthew J. Dovey (www.ceridwen.com) - initial API and implementation
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ceridwen.circulation</groupId>
  <artifactId>ceridwen-standard-interchange-protocol-library</artifactId>
  <version>2.9.3</version>
  <packaging>jar</packaging>

  <name>ceridwen-standard-interchange-protocol-library</name>
  <description>Java Implementation of the 3M SIP2 and NISO SIP3 Protocols for library circulation and self-check facilities.</description>
  <inceptionYear>2004</inceptionYear>
  <url>https://software.ceridwen.com/redmine/projects/ceridwen-standard-interchange-protocol-library</url>
  <organization>
    <name>Ceridwen Limited</name>
    <url>http://www.ceridwen.com</url>
  </organization>

  <licenses>
    <license>
      <name>GNU General Public License, Version 3.0</name>
      <url>http://www.gnu.org/licenses/gpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>Redmine</system>
    <url>https://software.ceridwen.com/redmine/projects/ceridwen-standard-interchange-protocol-library/issues</url>
  </issueManagement>

  <scm>
    <url>https://software.ceridwen.com/redmine/projects/ceridwen-standard-interchange-protocol-library/repository</url>
    <connection>scm:git:https://software.ceridwen.com/redmine/ceridwen-standard-interchange-protocol-library.git</connection>
    <tag>HEAD</tag>
  </scm>

  <properties>  
    <project.scm.id>git</project.scm.id>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>EEE, d MMMM, yyyy - HH:mm:ss zzz</maven.build.timestamp.format>
  </properties>

  <repositories>
    <repository>
      <id>ceridwen-libs-release</id>
      <name>Ceridwen Release Repository</name>
      <url>https://software.ceridwen.com/artifactory/libs-release</url>
    </repository>
    <repository>
      <id>ceridwen-libs-snapshot</id>
      <name>Ceridwen Snapshot Repository</name>
      <url>https://software.ceridwen.com/artifactory/libs-snapshot</url>
    </repository>
  </repositories>
  
  <pluginRepositories>
    <pluginRepository>
      <id>ceridwen-plugins-release</id>
      <name>Ceridwen Release Plugin Repository</name>
      <url>https://software.ceridwen.com/artifactory/plugins-release</url>
    </pluginRepository>
    <pluginRepository>
      <id>ceridwen-plugins-snapshot</id>
      <name>Ceridwen Snapshot Plugin Repository</name>
      <url>https://software.ceridwen.com/artifactory/plugins-snapshot</url>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
    <dependency>
      <groupId>com.ceridwen.util</groupId>
      <artifactId>ceridwen-util</artifactId>
      <version>1.6.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.4</version>
    </dependency>
    <dependency>
      <groupId>commons-net</groupId>
      <artifactId>commons-net</artifactId>
      <version>3.5</version>
    </dependency> 
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2</version>
    </dependency>
    <dependency>
      <groupId>commons-beanutils</groupId>
      <artifactId>commons-beanutils</artifactId>
      <version>1.9.3</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-transport</artifactId>
      <version>4.1.5.Final</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-handler</artifactId>
      <version>4.1.5.Final</version>
    </dependency>
  </dependencies>

  <prerequisites>
    <maven>3.3</maven>
  </prerequisites> 
  
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.19.1</version>
            <configuration>
                <testSourceDirectory>${basedir}/src/main/java/</testSourceDirectory>
                <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
                <test>Message#</test>
            </configuration>          
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
          <configuration>
            <archive>
              <manifest>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              </manifest>
              <manifestEntries>
                <Built-By>${user.name}</Built-By>
                <Build-Date>${maven.build.timestamp}</Build-Date>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>2.4.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.10.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.6</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.5.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.3</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>external.atlassian.jgitflow</groupId>
        <artifactId>jgitflow-maven-plugin</artifactId>
        <version>1.0.0-mjf_276-SNAPSHOT</version>
        <configuration>
          <flowInitContext>
            <masterBranchName>master</masterBranchName>
            <developBranchName>develop</developBranchName>
            <featureBranchPrefix>feature/</featureBranchPrefix>
            <releaseBranchPrefix>release/${project.artifactId}-</releaseBranchPrefix>
            <hotfixBranchPrefix>hotfix/${project.artifactId}-</hotfixBranchPrefix>
            <versionTagPrefix>version/${project.artifactId}-</versionTagPrefix>
          </flowInitContext>
          <allowSnapshots>true</allowSnapshots>
          <keepBranch>true</keepBranch>
          <noDeploy>true</noDeploy>
          <suppressFastForward>true</suppressFastForward>
        </configuration>
      </plugin>
    </plugins>
  </build>
    
</project>
